[DONE] Added endpoint documentation
