# backend/docs/openapi.json
@@ -5,7 +5,7 @@
     "description": "Documentation for ES-B3: MovieMate endpoints",
     "version": "1.0.0"
   },
-  "host": "http://localhost:3000",
+  "host": "undefined:undefined",
   "basePath": "/",
   "schemes": [
     "http"
@@ -25,9 +25,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       },
@@ -44,9 +41,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
@@ -57,9 +51,55 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "CreateUser": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string",
+          "example": "object"
+        },
+        "properties": {
+          "type": "object",
+          "properties": {
+            "userName": {
+              "type": "string",
+              "example": "carmen"
+            },
+            "email": {
+              "type": "string",
+              "example": "carmen@example.com"
+            },
+            "birthDate": {
+              "type": "string",
+              "example": "1990-01-01"
+            },
+            "password": {
+              "type": "string",
+              "example": "Password123"
+            },
+            "gender": {
+              "type": "string",
+              "example": "Female"
+            }
+          }
+        },
+        "required": {
+          "type": "array",
+          "example": [
+            "userName",
+            "email",
+            "birthDate",
+            "password",
+            "gender"
+          ],
+          "items": {
+            "type": "string"
           }
         }
       }
@@ -67,7 +107,7 @@
   },
   "serve": [
     {
-      "url": "http://localhost:3000",
+      "url": "undefined:undefined",
       "variables": {
         "port": {
           "default": 3000
